Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/OperationalOpportunityLineItem__c.object-meta.xml
<CustomObject>
    <description>AD - 275 The ability to capture an Operational Opportunity against an Account or Contract</description>
    <label>Operational Opportunity Line Item</label>
    <nameField>
        <displayFormat>OLI-{000000}</displayFormat>
        <label>Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operational Opportunities Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>