Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>E2E-118 Operational Opportunity Line Item Build out</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>