Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Corporate_Type__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Type__c</fullName>
    <description>E2E-118	Operational Opportunity Line Item Build out</description>
    <label>Corporate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Corporate_Type</valueSetName>
    </valueSet>
</CustomField>