Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Gross_Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Percentage__c</fullName>
    <description>E2E-118 Operational Opportunity Line Item Build out</description>
    <label>GM %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>