Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/In_Year_GM_Contractual__c.field-meta.xml
<CustomField>
    <fullName>In_Year_GM_Contractual__c</fullName>
    <formula>if( ISPICKVAL( Service_Type__c , &quot;Contractual&quot;), (Gross_Margin__c/365) * Remaining_Days__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Year GM Contractual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>