Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <description>E2E-118 Operational Opportunity Line Item Build out</description>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>