Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Operational_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Operational_Opportunity__c</fullName>
    <description>AD-275 The ability to capture an Operational Opportunity against an Account or Contract</description>
    <label>Operational Opportunity</label>
    <referenceTo>OperationalOpportunity__c</referenceTo>
    <relationshipLabel>Operational Opportunities Line Item</relationshipLabel>
    <relationshipName>Operational_Opportunities_Line_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>