Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Operational_Opportunity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Operational_Opportunity_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>E2E-118 Operational Opportunity Line Item Build out</description>
    <label>Operational Opportunity Line Item</label>
    <referenceTo>OperationalOpportunityLineItem__c</referenceTo>
    <relationshipLabel>Operational Opportunities Line Item</relationshipLabel>
    <relationshipName>Operational_Opportunities_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>