Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/OperationalOppLineItem_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>OperationalOppLineItem_CaseSafeID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <label>OperationalOppLineItem CaseSafeID</label>
    <type>Text</type>
</CustomField>