Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>E2E-118 Operational Opportunity Line Item Build out</description>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operational_Opportunities_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>