Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Owner_Country__c</fullName>
    <formula>Operational_Opportunity__r.Owner__r.Country</formula>
    <label>Owner Country</label>
    <type>Text</type>
</CustomField>