Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>Owner_Region__c</fullName>
    <formula>TEXT(Operational_Opportunity__r.Owner__r.Region__c)</formula>
    <label>Owner Region</label>
    <type>Text</type>
</CustomField>