Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team__c</fullName>
    <formula>TEXT(Operational_Opportunity__r.Owner__r.Team__c)</formula>
    <label>Owner Team</label>
    <type>Text</type>
</CustomField>