Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days__c</fullName>
    <formula>DATE(YEAR( Operational_Opportunity__r.Start_Date__c ),12,31) - Operational_Opportunity__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>