Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>E2E-118 Operational Opportunity Line Item Build out</description>
    <label>Service</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Operational Opportunities Line Item</relationshipLabel>
    <relationshipName>Operational_Opportunities_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>