Agentforce/force-app/main/default/objects/OperationalOpportunityLineItem__c/fields/Service_Family__c.field-meta.xml
<CustomField>
    <fullName>Service_Family__c</fullName>
    <label>Service Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>